[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.5", features = ["derive", "cargo"] }
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
tungstenite = "0.16.0"
url = "2.2.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.6.0", features = ["full"] }
sys-info = "0.9.1"
tokio-tungstenite = "0.16.1"
futures = "0.3.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
dirs = "3.0.1"
futures-util = "0.3.19"
signal-hook = "0.3.13"
tokio-stream = "0.1.8"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
serde_json = "1.0.74"
os_pipe = "1.0.0"
shared_child = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(not(windows))'.dependencies]
xdg = "2.4.0"
